# seekdb-ecology-plugins

./: .gitignore  README.md  README_CN.md  pyrightconfig.json
agent-skills/: .gitignore  MANIFEST.in  README.md  README_CN.md  plugin.json  pyproject.toml  upload_to_pypi.py
agent-skills/skills/importing-to-seekdb/example-data/: sample_products.xlsx
agent-skills/skills/importing-to-seekdb/scripts/: import_to_seekdb.py  read_excel.py
agent-skills/skills/querying-from-seekdb/scripts/: query_from_seekdb.py
agent-skills/skills/seekdb/: SKILL.md
agent-skills/skills/seekdb-cli/: SKILL.md
agent-skills/skills/seekdb/references/: _catalog_hash_cache.json  create-ai-model-endpoint.md  examples.md  seekdb-docs-catalog.jsonl
agent-skills/skills/seekdb/scripts/: generate_catalog.py  update_docs.sh
agent-skills/skills/seekdb/seekdb-docs/: 10.doc-overview.md
agent-skills/skills/seekdb/seekdb-docs/100.get-started/100.use-seekdb-with-sql/: 10.deploy-seekdb-testing-environment.md  5.experience-vector-search-with-sql.md
agent-skills/skills/seekdb/seekdb-docs/100.get-started/110.use-seekdb-with-skill/: 100.agent-skills.md
agent-skills/skills/seekdb/seekdb-docs/100.get-started/200.ai-coding/: 100.building-personal-knowledge-base-through-ai-dialogue-using-seekdb-mcp-server.md  200.building-an-ai-programming-assistant-that-understands-vector-databases-with-seekdb-claude-code.md  300.making-cursor-ai-instantly-understand-seekdb-a-guide-to-using-the-seekdb-cursor-extension.md
agent-skills/skills/seekdb/seekdb-docs/100.get-started/50.use-seekdb-with-sdk/: 25.using-seekdb-in-python-sdk.md
agent-skills/skills/seekdb/seekdb-docs/200.develop/200.design-database-schema/: 20.create-database-in-develop.md  30.create-table-in-develop.md  40.create-index-in-develop.md  50.fork-table.md
agent-skills/skills/seekdb/seekdb-docs/200.develop/400.mcp-server/: 400.oceanbase-mcp-server-and-ai-tool-integration-guide.md
agent-skills/skills/seekdb/seekdb-docs/200.develop/500.vector-embedding/: 200.ai-embed-function.md
agent-skills/skills/seekdb/seekdb-docs/200.develop/600.search/: 400.semantic-search.md  500.full-text-search.md  600.ai-rerank.md
agent-skills/skills/seekdb/seekdb-docs/450.reference/: 1600.seekdb-docs-catalog.md
agent-skills/src/clawhub_skill/: SKILL.md
agent-skills/src/seekdb_cli/: connection.py  logger.py  main.py
agent-skills/src/seekdb_cli/commands/: data.py  query.py
agent-skills/src/seekdb_plugin_installer/: __init__.py  main.py
agent-skills/tests/seekdb_cli/: test_masking.py  test_output_formats.py
seekdb-cli/: README.md  README_CN.md  pyproject.toml
seekdb-cli/src/seekdb_cli/: connection.py  logger.py  main.py  masking.py  output.py  vecconnection.py
seekdb-cli/src/seekdb_cli/commands/: ai.py  collection.py  data.py  profile.py  query.py  relations.py  schema.py  sql.py
seekdb-cli/tests/: test_connection.py  test_embedded.py  test_logger.py  test_masking.py  test_output.py  test_profile.py  test_relations.py  test_schema_hidden.py  test_sql_parsing.py
(+410 files in other folders)
