[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seekdb-cli"
version = "0.1.0"
description = "AI-Agent-friendly database CLI for seekdb / OceanBase"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "David Zhang"}
]
keywords = ["seekdb", "database", "cli", "ai-agent", "oceanbase"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]

dependencies = [
    "click>=8.0",
    "pymysql>=1.0",
    "pyseekdb>=0.1",
    "openai>=1.0",
]

[project.scripts]
seekdb = "seekdb_cli.main:cli"

[project.urls]
Homepage = "https://github.com/oceanbase/seekdb-ecology-plugins"
Repository = "https://github.com/oceanbase/seekdb-ecology-plugins"
Issues = "https://github.com/oceanbase/seekdb-ecology-plugins/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
